fix scrollbar y

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,13 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Estas variables son opcionales, puedes dejarlas si las usas en tu diseño */
+/* Garantizamos que html y body sean 100% y overflow-auto */
+html,
+body {
+  height: 100%;
+  overflow-y: auto;
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -19,5 +25,5 @@ body {
   background-color: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-  transition: background-color 0.3s ease; /* Agregamos la transición aquí */
+  transition: background-color 0.3s ease;
 }
